# petlab

./: .gitignore  README.md  pyproject.toml
petlab_task.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
petlab_task/app/: fizz_buzz.py  main.py
petlab_task/app/validator/: input_validator.py  validator_interface.py
petlab_task/tests/: test_fizz_buzz.py  test_main.py
petlab_task/tests/validator/: test_input_validator.py
