[project]
name = "petlab_task"
version = "0.0.1"
requires-python = ">= 3.13.0"
dependencies = []
authors = [
  {name = "Okeke Chukwuemeka Christian", email = "okeke.chukwuemeka.christian1960@gmail.com"},
]
maintainers = [
  {name = "Okeke Chukwuemeka Christian", email = "okeke.chukwuemeka.christian1960@gmail.com"},
]
description = "PETLAB Task"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.13.0"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401"]


[tool.ruff]
line-length = 150
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "petlab_task/tests",
]